--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<html>TEST</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <form action="/" method="POST">
+        <input type="text", name="_url">
+        <input type="submit" value="Parse">
+    </form>
+</body>
+</html>
