--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Document</title>
 </head>
 <body>
-    <form action="/" method="POST">
-        <input type="text", name="_url">
-        <input type="submit" value="Parse">
-    </form>
+    <div id="root">
+        <form action="/" method="POST">
+            <input type="text", name="_url">
+            <input type="submit" value="Parse">
+        </form>
+    </div>
 </body>
 </html>
