📎 Add hint label for URL form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <input type="text", name="_url">
             <input type="submit" value="Parse">
         </form>
+        <div id="hint">
+            <h4>URL must be like: <b>https://open.spotify.com/playlist/xxxxxxxxx</b></h4>
+        </div>
     </div>
 </body>
 </html>
