--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="public/style.css">
     <title>Document</title>
 </head>
 <body>
     <div id="root">
-        <form action="/" method="POST">
-            <input type="text", name="_url">
-            <input type="submit" value="Parse">
-        </form>
-        <div id="hint">
-            <h4>URL must be like: <b>https://open.spotify.com/playlist/xxxxxxxxx</b></h4>
+        <div id="images">
+            <img id="spotify-logo" src="/public/spoti.png">
+            <img id="github-logo" src="public/github.png">
+        </div>
+        <div id="url-form">
+            <form class="form" action="/" method="POST">
+                <input type="text", name="_url">
+                <input type="submit" value="Parse">
+            </form>
+            <div id="hint">
+                <text id="hint">URL must be like: <b>https://open.spotify.com/playlist/xxxxxxxxx</b></text>
+            </div>
         </div>
     </div>
 </body>
