🔧 Fix file paths

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div id="root">
         <div id="images">
-            <img id="spotify-logo" src="/public/spoti.png">
-            <img id="github-logo" src="public/github.png">
+            <img id="spotify-logo" src="spoti.png">
+            <img id="github-logo" src="github.png">
         </div>
         <div id="url-form">
             <form class="form" action="/" method="POST">
